--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=T2_GermanValcarcel
+
+spring.datasource.url=jdbc:mysql://localhost:3306/examen2?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=999268594
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
